Created new front-end portfolio website

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,47 +1,91 @@
+<div id="about" class="mb-40"></div>
 <section id="about" class="h-full grid grid-cols-12">
-  <div class="col-span-12 text-2xl md:text-5xl leading-snug mx-5">
-    <p class="mb-8 fade-in">
-      Ciao &#x1F44B;&#x1F3FC;<br />
-      piacere Simone!
-    </p>
-    <p class="mb-4 fade-in">
-      Da circa un anno mi occupo di realizzare <span class="text-[#FF6D1F]"
-        >siti web</span
-      > e <span class="text-[#FF6D1F]">landing page</span>.
-    </p>
-    <p class="fade-in">
-      Sfrutto la potenza del web per aiutare piccole realtà locali e freelance
-      ad ottenere maggiore <span class="text-[#FF6D1F]">visibilità</span>.
-    </p>
-    <div class="mt-8 text-end">
-      <p class="mb-8 fade-in">
-        Ciò che è nato come un hobby, mi ha portato nel 2024 a lasciare il mio
-        lavoro da dipendente per dedicarmi totalmente allo <span
-          class="text-[#FF6D1F]">sviluppo web</span
-        > e crescere in questo settore.
+  <div class="col-start-2 col-end-12 text-2xl text-[#949494]">
+    <p class="mb-2">
+      Benvenuto/a 👋🏼
+      <p class="mb-2">
+        Mi chiamo <span class="text-black">Simone Garofalo</span> e sono appassionato
+        di <span class="text-black">web design</span> e <span class="text-black"
+          >sviluppo web</span
+        >.
       </p>
-      <p class="fade-in">
-        Sono sempre alla ricerca di nuovi progetti e collaborazioni, quindi non
-        esitare a contattarmi!
+      <p class="mb-4">
+        Ciò che è nato come un hobby, mi ha portato nel <span class="text-black"
+          >2024</span
+        > a lasciare il mio lavoro da dipendente per dedicarmi totalmente allo sviluppo
+        web e crescere in questo settore.
       </p>
-      <a href="#contatti">
-        <div class="flex justify-end gap-1 mt-2 md:mt-6">
-          <span class="text-2xl md:text-5xl font-bold text-[#FF6D1F] underline">
-            Contattami ora
-          </span>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            height="16px"
-            viewBox="0 -960 960 960"
-            width="16px"
-            fill="#FF6D1F"
-            ><path d="m216-160-56-56 464-464H360v-80h400v400h-80v-264L216-160Z"
-            ></path></svg
-          >
-        </div>
-      </a>
+      <p>
+        Sono sempre alla ricerca di <span class="text-black"
+          >nuove opportunità</span
+        > e collaborazioni, quindi non esitare a contattarmi!
+      </p>
+    </p>
+  </div>
+  <div
+    class="col-start-2 col-end-12 md:col-start-2 md:col-end-6 mt-40 md:my-40"
+  >
+    <h3 class="text-3xl mb-4">Skills</h3>
+    <div class="flex flex-wrap justify-start text-lg gap-x-1 gap-y-4">
+      <div>
+        <span class="py-1 px-2 border-2 border-black rounded-full">HTML</span>
+      </div>
+      <div>
+        <span class="py-1 px-2 border-2 border-black rounded-full">CSS</span>
+      </div>
+      <div>
+        <span class="py-1 px-2 border-2 border-black rounded-full"
+          >JavaScript</span
+        >
+      </div>
+      <div>
+        <span class="py-1 px-2 bg-[#EFEEEC] text-[#949494] rounded-full"
+          >PHP</span
+        >
+      </div>
+      <div>
+        <span class="py-1 px-2 bg-[#EFEEEC] text-[#949494] rounded-full"
+          >MySQL</span
+        >
+      </div>
+      <div>
+        <span class="py-1 px-2 border-2 border-black rounded-full">Astro</span
+        ><br />
+      </div>
+      <div>
+        <span class="py-1 px-2 border-2 border-black rounded-full"
+          >Tailwind</span
+        >
+      </div>
+      <div>
+        <span class="py-1 px-2 bg-[#EFEEEC] text-[#949494] rounded-full"
+          >GSAP</span
+        >
+      </div>
+      <div>
+        <span class="py-1 px-2 bg-[#EFEEEC] text-[#949494] rounded-full"
+          >Wordpress</span
+        >
+      </div>
+      <div>
+        <span class="py-1 px-2 bg-[#EFEEEC] text-[#949494] rounded-full"
+          >Figma</span
+        >
+      </div>
+      <div>
+        <span class="py-1 px-2 border-2 border-black rounded-full">UX/UI</span>
+      </div>
     </div>
   </div>
-
-  <script src="/src/scripts/animation-about.js"></script>
+  <div
+    class="col-start-2 col-end-12 md:col-start-8 md:col-end-12 flex flex-col md:items-end mt-10 md:mt-40"
+  >
+    <h3 class="text-3xl mb-4">Formazione</h3>
+    <h4 class="">Corso Web Design & Front-end development</h4>
+    <p class="text-xs mb-3 italic text-[#949494]">
+      Nuova Accademia delle Belle Arti di Milano (NABA)
+    </p>
+    <h4 class="">Web development bootcamp</h4>
+    <p class="text-xs mb-3 italic text-[#949494]">Udemy</p>
+  </div>
 </section>
