--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,102 +1,83 @@
-<footer>
-  <div class="h-svh w-full grid grid-cols-12 grid-rows-2 bg-[#FF6D1F]">
-    <div
-      class="col-start-2 col-end-12 md:col-start-6 md:col-end-12 flex items-center text-end"
-    >
-      <h3 class="text-4xl md:text-6xl font-bold">
-        CREIAMO INSIEME QUALCOSA DI UNICO
-      </h3>
+<footer id="contatti" class="h-full w-full grid grid-cols-12 md:mt-20 mb-8">
+  <div class="col-start-2 col-end-12 md:col-start-2 md:col-end-6">
+    <div class="text-lg leading-none tremble mb-4">
+      <a href="/">simone garofalo</a>
     </div>
-    <div
-      class="col-start-2 col-end-12 flex flex-col gap-3 md:gap-5 text-3xl md:text-5xl"
-    >
-      <a href="tel:+393342655103">
-        <div
-          class="flex justify-between items-center border-b-2 border-black mb-2"
+    <div>
+      <p class="text-[#949494]">Il mio indirizzo mail</p>
+      <a href="mailto:simonegarofalo.webdesign@gmail.com">
+        <span class="text-sm md:text-base"
+          >simonegarofalo.webdesign@gmail.com</span
         >
-          CHIAMA
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            height="30px"
-            viewBox="0 -960 960 960"
-            width="30px"
-            fill="#000000"
-            ><path d="m216-160-56-56 464-464H360v-80h400v400h-80v-264L216-160Z"
-            ></path></svg
-          >
-        </div>
       </a>
-      <a href="mailto:simonegarofalo.webdesigner@gmail.com">
-        <div
-          class="flex justify-between items-center border-b-2 border-black mb-2"
-        >
-          SCRIVI
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            height="30px"
-            viewBox="0 -960 960 960"
-            width="30px"
-            fill="#000000"
-            ><path d="m216-160-56-56 464-464H360v-80h400v400h-80v-264L216-160Z"
-            ></path></svg
-          >
-        </div>
-      </a>
-      <div class="flex justify-between items-center">
-        SOCIAL
-        <div class="flex gap-1">
-          <a
-            href="https://www.linkedin.com/in/simone-garofalo/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <svg
-              class="hover:scale-110"
-              width="30"
-              height="30"
-              viewBox="0 0 613 613"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M485.292 76.625C498.84 76.625 511.833 82.007 521.413 91.587C530.993 101.167 536.375 114.16 536.375 127.708V485.292C536.375 498.84 530.993 511.833 521.413 521.413C511.833 530.993 498.84 536.375 485.292 536.375H127.708C114.16 536.375 101.167 530.993 91.587 521.413C82.007 511.833 76.625 498.84 76.625 485.292V127.708C76.625 114.16 82.007 101.167 91.587 91.587C101.167 82.007 114.16 76.625 127.708 76.625H485.292ZM472.521 472.521V337.15C472.521 315.067 463.748 293.888 448.133 278.272C432.517 262.657 411.338 253.884 389.255 253.884C367.545 253.884 342.258 267.166 329.998 287.088V258.737H258.737V472.521H329.998V346.6C329.998 326.933 345.834 310.842 365.501 310.842C374.985 310.842 384.08 314.609 390.786 321.315C397.492 328.021 401.26 337.117 401.26 346.6V472.521H472.521ZM175.727 218.637C187.107 218.637 198.021 214.116 206.069 206.069C214.116 198.021 218.637 187.107 218.637 175.727C218.637 151.973 199.48 132.561 175.727 132.561C164.278 132.561 153.299 137.109 145.204 145.204C137.109 153.299 132.561 164.278 132.561 175.727C132.561 199.48 151.973 218.637 175.727 218.637ZM211.23 472.521V258.737H140.479V472.521H211.23Z"
-                fill="black"></path>
-            </svg>
-          </a>
-          <a
-            href="https://github.com/simonegarofalo"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <svg
-              class="hover:scale-110"
-              width="30"
-              height="30"
-              viewBox="0 0 654 613"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M326.755 51.083C290.997 51.083 255.589 57.6896 222.552 70.5254C189.516 83.3613 159.498 102.175 134.213 125.893C83.1473 173.793 54.459 238.759 54.459 306.5C54.459 419.394 132.608 515.175 240.71 549.146C254.325 551.189 258.681 543.271 258.681 536.375V493.209C183.255 508.534 167.19 458.983 167.19 458.983C154.664 429.355 136.965 421.437 136.965 421.437C112.186 405.601 138.871 406.112 138.871 406.112C166.101 407.9 180.532 432.42 180.532 432.42C204.222 471.243 244.25 459.75 259.77 453.62C262.221 437.018 269.301 425.779 276.925 419.394C216.475 413.008 153.03 391.043 153.03 293.729C153.03 265.378 163.378 242.646 181.077 224.511C178.354 218.126 168.823 191.562 183.8 157.081C183.8 157.081 206.673 150.185 258.681 183.133C280.193 177.514 303.61 174.705 326.755 174.705C349.901 174.705 373.318 177.514 394.829 183.133C446.838 150.185 469.711 157.081 469.711 157.081C484.687 191.562 475.157 218.126 472.434 224.511C490.133 242.646 500.48 265.378 500.48 293.729C500.48 391.298 436.763 412.753 376.041 419.138C385.844 427.056 394.829 442.637 394.829 466.391V536.375C394.829 543.271 399.186 551.444 413.073 549.146C521.175 514.92 599.052 419.394 599.052 306.5C599.052 272.958 592.009 239.745 578.324 208.756C564.64 177.767 544.583 149.61 519.298 125.893C494.013 102.175 463.995 83.3613 430.959 70.5254C397.922 57.6896 362.514 51.083 326.755 51.083Z"
-                fill="black"></path>
-            </svg>
-          </a>
-        </div>
-      </div>
     </div>
-    <div
-      class="col-start-2 col-end-12 flex justify-center items-center md:justify-end mb-6"
-    >
-      <ul
-        class="flex flex-row items-center gap-4 md:gap-5 justify-center text-sm md:text-xl"
+    <div class="flex gap-2 mt-8">
+      <a
+        href="https://www.linkedin.com/in/simone-garofalo/"
+        target="_blank"
+        rel="noopener noreferrer"
       >
-        <a href="#about" class="hover:underline cursor-pointer">About me</a>
-        <a href="/curriculum" class="hover:underline cursor-pointer"
-          >Curriculum</a
+        <svg
+          width="40"
+          height="40"
+          viewBox="0 0 613 613"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+          class="hover:scale-110"
         >
-        <a href="#progetti" class="hover:underline cursor-pointer">Progetti</a>
-        <a href="#contatti" class="hover:underline cursor-pointer">Contatti</a>
-      </ul>
+          <path
+            d="M485.292 76.625C498.84 76.625 511.833 82.007 521.413 91.587C530.993 101.167 536.375 114.16 536.375 127.708V485.292C536.375 498.84 530.993 511.833 521.413 521.413C511.833 530.993 498.84 536.375 485.292 536.375H127.708C114.16 536.375 101.167 530.993 91.587 521.413C82.007 511.833 76.625 498.84 76.625 485.292V127.708C76.625 114.16 82.007 101.167 91.587 91.587C101.167 82.007 114.16 76.625 127.708 76.625H485.292ZM472.521 472.521V337.15C472.521 315.067 463.748 293.888 448.133 278.272C432.517 262.657 411.338 253.884 389.255 253.884C367.545 253.884 342.258 267.166 329.998 287.088V258.737H258.737V472.521H329.998V346.6C329.998 326.933 345.834 310.842 365.501 310.842C374.985 310.842 384.08 314.609 390.786 321.315C397.492 328.021 401.26 337.117 401.26 346.6V472.521H472.521ZM175.727 218.637C187.107 218.637 198.021 214.116 206.069 206.069C214.116 198.021 218.637 187.107 218.637 175.727C218.637 151.973 199.48 132.561 175.727 132.561C164.278 132.561 153.299 137.109 145.204 145.204C137.109 153.299 132.561 164.278 132.561 175.727C132.561 199.48 151.973 218.637 175.727 218.637ZM211.23 472.521V258.737H140.479V472.521H211.23Z"
+            fill="black"></path>
+        </svg>
+      </a>
+      <a
+        href="https://github.com/simonegarofalo"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <svg
+          width="40"
+          height="40"
+          viewBox="0 0 654 613"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+          class="hover:scale-110"
+        >
+          <path
+            d="M326.755 51.083C290.997 51.083 255.589 57.6896 222.552 70.5254C189.516 83.3613 159.498 102.175 134.213 125.893C83.1473 173.793 54.459 238.759 54.459 306.5C54.459 419.394 132.608 515.175 240.71 549.146C254.325 551.189 258.681 543.271 258.681 536.375V493.209C183.255 508.534 167.19 458.983 167.19 458.983C154.664 429.355 136.965 421.437 136.965 421.437C112.186 405.601 138.871 406.112 138.871 406.112C166.101 407.9 180.532 432.42 180.532 432.42C204.222 471.243 244.25 459.75 259.77 453.62C262.221 437.018 269.301 425.779 276.925 419.394C216.475 413.008 153.03 391.043 153.03 293.729C153.03 265.378 163.378 242.646 181.077 224.511C178.354 218.126 168.823 191.562 183.8 157.081C183.8 157.081 206.673 150.185 258.681 183.133C280.193 177.514 303.61 174.705 326.755 174.705C349.901 174.705 373.318 177.514 394.829 183.133C446.838 150.185 469.711 157.081 469.711 157.081C484.687 191.562 475.157 218.126 472.434 224.511C490.133 242.646 500.48 265.378 500.48 293.729C500.48 391.298 436.763 412.753 376.041 419.138C385.844 427.056 394.829 442.637 394.829 466.391V536.375C394.829 543.271 399.186 551.444 413.073 549.146C521.175 514.92 599.052 419.394 599.052 306.5C599.052 272.958 592.009 239.745 578.324 208.756C564.64 177.767 544.583 149.61 519.298 125.893C494.013 102.175 463.995 83.3613 430.959 70.5254C397.922 57.6896 362.514 51.083 326.755 51.083Z"
+            fill="black"></path>
+        </svg>
+      </a>
+      <a
+        href="https://www.instagram.com/simonegarofalo.webdesign/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <svg
+          width="40"
+          height="40"
+          viewBox="0 0 613 613"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+          class="hover:scale-110"
+        >
+          <path
+            d="M434.208 217.104C455.367 217.104 472.521 199.951 472.521 178.792C472.521 157.633 455.367 140.479 434.208 140.479C413.049 140.479 395.896 157.633 395.896 178.792C395.896 199.951 413.049 217.104 434.208 217.104Z"
+            fill="black"></path>
+          <path
+            d="M408.667 76.625C479.162 76.625 536.375 133.838 536.375 204.333V408.667C536.375 479.162 479.162 536.375 408.667 536.375H204.333C133.838 536.375 76.625 479.162 76.625 408.667V204.333C76.625 133.838 133.838 76.625 204.333 76.625H306.5H408.667Z"
+            stroke="black"
+            stroke-width="50"
+            stroke-linecap="round"
+            stroke-linejoin="round"></path>
+          <path
+            d="M306.5 204.333C362.947 204.333 408.666 250.053 408.666 306.5C408.666 362.947 362.947 408.666 306.5 408.666C250.053 408.666 204.333 362.947 204.333 306.5C204.333 250.053 250.053 204.333 306.5 204.333Z"
+            stroke="black"
+            stroke-width="50"
+            stroke-linecap="round"
+            stroke-linejoin="round"></path>
+        </svg>
+      </a>
     </div>
   </div>
 </footer>
