--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,97 +1,28 @@
-<section id="hero" class="h-svh w-full grid grid-cols-12">
+<section class="h-svh w-full grid grid-cols-12">
   <div
-    class="col-span-12 flex flex-col items-start justify-center gap-3 text-7xl md:text-9xl font-bold mt-40 mx-5"
+    class="col-start-2 col-end-12 flex flex-col gap-5 items-center justify-center"
   >
-    <h1>
-      Sono un<br />web <span class="relative col-span-12"
-        ><svg
-          id="Group50"
-          class="absolute right-0 -inset-1"
-          width="15621"
-          height="3569"
-          viewBox="0 0 15621 3569"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-          style="max-width: 110%; max-height: 120%;"
-        >
-          <path
-            d="M11673.5 106.131C9838.49 224.049 11204.5 121.325 8490.68 285.107C7766.59 328.805 6793.05 417.664 5963.06 523.023C4721.68 680.604 3577.12 823.746 2121.52 1205.04C1652.17 1327.99 535.584 1631.09 236.781 2025.56C-222.29 2835.33 2863.99 3037.48 3871.81 3077.36C4645.72 3107.98 4787.6 3133.76 6735.57 3070.65C9117.73 2993.48 10119.1 2831.93 11234.4 2674.28C12349.7 2516.63 13538.2 2228.28 14528.4 1891.65C15021.1 1724.13 15394.3 1475.18 15440.8 1271.19C15564.6 728.576 13905.1 484.169 13130.3 408.188C11816.8 279.396 9084.55 206.387 8486.69 161.967"
-            stroke="#FF6D1F"
-            stroke-width="80"
-            stroke-linecap="round"
-            stroke-dasharray="0,0,0,34989.8671875"
-            ><animate
-              attributeType="XML"
-              attributeName="stroke-dasharray"
-              repeatCount="1"
-              dur="4.545454545454546s"
-              values="0,0,0,34989.8671875; 
-                    0,17494.93359375,17494.93359375,0; 
-                    34989.8671875,0,0,0"
-              keyTimes="0; 0.5; 1"
-              fill="freeze"></animate></path
-          >
-          <path
-            d="M11810.5 108.433C11812.4 168.968 11645.1 211.323 11447.1 217.737C11281.2 198.73 11576.8 176.601 11574.9 116.066C11572.9 55.5316 11243.6 53.6486 11441.6 47.2348C11639.6 40.821 11808.5 47.8981 11810.5 108.433Z"
-            fill="white"
-            stroke-dasharray="0,0,0,1327.1461181640625"
-            ><animate
-              attributeType="XML"
-              attributeName="stroke-dasharray"
-              repeatCount="1"
-              dur="4.545454545454546s"
-              values="0,0,0,1327.1461181640625; 
-                    0,663.5730590820312,663.5730590820312,0; 
-                    1327.1461181640625,0,0,0"
-              keyTimes="0; 0.5; 1"
-              fill="freeze"></animate></path
-          >
-        </svg>designer</span
+    <h1 class="overflow-hidden text-xs md:text-4xl p-2">
+      Sono un <span class="text dinamic-text-content"
+        >Web designer & Front-end developer</span
       >
-      <br />freelance<br />di Milano
     </h1>
-
-    <div class="flex gap-2 md:gap-3 text-xl md:text-xl">
-      <a href="/Simone Garofalo CV.pdf" download>
-        <button class="border-2 border-black py-1 px-2 rounded-3xl">
-          <div class="flex justify-center items-center gap-1">
-            Scarica CV
-            <div class="border-2 border-black bg-black rounded-full">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                height="16px"
-                viewBox="0 -960 960 960"
-                width="16px"
-                fill="#ffffff"
-                ><path
-                  d="M440-800v487L216-537l-56 57 320 320 320-320-56-57-224 224v-487h-80Z"
-                ></path></svg
-              >
-            </div>
-          </div>
-        </button>
-      </a>
-      <div>
-        <a href="#contatti">
-          <button
-            class="border-2 border-[#FF6D1F] bg-[#FF6D1F] text-white py-1 px-2 rounded-3xl"
-          >
-            <div class="flex justify-center items-center gap-1">
-              Contattami
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                height="20px"
-                viewBox="0 -960 960 960"
-                width="20px"
-                fill="#ffffff"
-                ><path
-                  d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z"
-                ></path></svg
-              >
-            </div>
-          </button>
-        </a>
+    <a href="mailto:simonegarofalo.webdesign@gmail.com">
+      <div
+        class="text-blue-600 border-2 border-blue-600 rounded-full py-2 px-4 cursor-pointer hover:scale-105 transition duration-200"
+      >
+        Contattami
       </div>
-    </div>
+    </a>
+    <a href="/Simone Garofalo CV.pdf" download>
+      <div
+        id="button-hero"
+        class="bg-blue-600 hover:bg-blue-800 transition duration-200 text-white rounded-full py-2 px-3 cursor-pointer hidden"
+      >
+        Download CV
+      </div>
+    </a>
   </div>
 </section>
+
+<script src="/src/scripts/animation-hero.js"></script>
