--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,7 @@ import "../styles/global.css";
 import Navbar from "../components/Navbar.astro";
 import Hero from "../components/Hero.astro";
 import About from "../components/About.astro";
-import Project from "../components/Project.astro";
-import Project2 from "../components/Project2.astro";
-import Project3 from "../components/Project3.astro";
-
+import Projects from "../components/Projects.astro";
 import Footer from "../components/Footer.astro";
 ---
 
@@ -24,46 +21,8 @@ import Footer from "../components/Footer.astro";
   <body>
     <Navbar />
     <Hero />
-    <h3
-      id="about"
-      class="text-5xl lg:text-7xl font-bold ml-5 mt-20 lg:mt-40 mb-4 lg:mb-8"
-    >
-      About me
-    </h3>
     <About />
-    <h3
-      id="progetti"
-      class="text-5xl lg:text-7xl font-bold ml-5 mt-20 lg:mt-60 mb-4 lg:mb-8"
-    >
-      Progetti
-    </h3>
-    <section class="h-svh grid grid-cols-12 grid-rows-3 gap-3 mx-5">
-      <Project
-        id="project-1"
-        image="progetto-1.png"
-        title="Portfolio"
-        description="Astro, HTML5, CSS3, Javascript, Tailwind"
-      />
-      <Project2
-        id="project-2"
-        image="progetto-2.png"
-        title="Sito web"
-        description="HTML5, CSS3, GSAP, Javascript, PHP, MySQL"
-      />
-      <Project3
-        id="project-3"
-        image="progetto-3.png"
-        title="Landing page"
-        description="HTML5, CSS3, Javascript, PHP, MySQL"
-      />
-    </section>
-
-    <h3
-      id="contatti"
-      class="text-5xl lg:text-7xl font-bold ml-5 mt-20 lg:mt-0 mb-4 lg:mb-8"
-    >
-      Contatti
-    </h3>
+    <Projects />
     <Footer />
   </body>
 </html>
