--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,9 +15,30 @@ body {
   font-size: 16px;
 }
 
-.close {
-  display: none;
+/* Animazione logo */
+.tremble:hover {
+  animation: shake 0.5s infinite;
 }
+
+@keyframes shake {
+  0% {
+    transform: translatey(0);
+  }
+  25% {
+    transform: translatey(-3px);
+  }
+  50% {
+    transform: translatey(0px);
+  }
+  75% {
+    transform: translatey(-3px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+
+/* Animazione hero*/
 
 .text {
   position: relative;
@@ -53,11 +74,7 @@ body {
   }
 }
 
-.fade-in {
-  opacity: 0;
-  transition: opacity 0.8s ease-out, transform 0.8s ease-out;
-}
-
-.fade-in.visible {
-  opacity: 1;
+.hidden {
+  transform: translateY(-100%);
+  transition: transform 0.3s ease-in-out;
 }
