--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,7 +14,7 @@
         Contattami
       </div>
     </a>
-    <a href="/Simone Garofalo CV.pdf" download>
+    <a href="/Simone-Garofalo-CV.pdf" download>
       <div
         id="button-hero"
         class="bg-blue-600 hover:bg-blue-800 transition duration-200 text-white rounded-full py-2 px-3 cursor-pointer hidden"
