--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -29,7 +29,7 @@
         >
       </li>
       <li id="button" class="ml-10 hidden">
-        <a href="/Simone Garofalo CV.pdf" download>
+        <a href="/Simone-Garofalo-CV.pdf" download>
           <div
             class="bg-blue-600 hover:bg-blue-800 transition duration-200 text-white rounded-full py-2 px-4 cursor-pointer"
           >
