--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -67,7 +67,7 @@ import Weather from "./Weather.astro";
       <Todo />
     </div>
     <div
-      class="row-start-7 row-end-8 col-span-4 md:col-start-4 md:col-end-5 row-span-3 md:row-span-3 bg-[#EFEEEC] rounded-3xl relative"
+      class="row-start-7 row-end-8 col-span-4 md:col-start-4 md:col-end-5 md:row-span-2 bg-[#EFEEEC] rounded-3xl relative"
     >
       <Weather />
     </div>
