Fixed hero layout

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,6 @@
 <section class="h-svh w-full grid grid-cols-12">
   <div
-    class="col-start-2 col-end-12 flex flex-col gap-5 items-center justify-center"
+    class="col-start-2 col-end-12 flex flex-col gap-5 items-center justify-center translate-y-20"
   >
     <h1 class="overflow-hidden text-xs md:text-4xl p-2">
       Sono un <span class="text dinamic-text-content"
