updated the layout of the weather component

--- a/src/components/Weather.astro
+++ b/src/components/Weather.astro
@@ -1,9 +1,20 @@
 <div class="h-full rounded-3xl flex justify-center items-center gap-5">
   <img id="weather-img" src="/sunny.png" alt="" class="w-24" />
   <div class="flex flex-col items-center">
+    <div class="flex justify-center items-center">
+      <span id="city" class="text-xl">Milano</span>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        height="16px"
+        viewBox="0 -960 960 960"
+        width="16px"
+        fill=""
+        ><path
+          d="M516-120 402-402 120-516v-56l720-268-268 720h-56Zm26-148 162-436-436 162 196 78 78 196Zm-78-196Z"
+        ></path></svg
+      >
+    </div>
     <span id="temperature" class="text-3xl"></span>
-    <span id="city" class="text-3xl">Milano</span>
   </div>
 </div>
-
 <script src="/src/scripts/weather.js"></script>
