Updated the hero section and adjusted some positioning elements

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,4 +1,4 @@
-<div id="about" class="mb-40"></div>
+<div id="about" class="h-32"></div>
 <section id="about" class="h-full grid grid-cols-12">
   <div class="col-start-2 col-end-12 text-2xl text-[#949494]">
     <p class="mb-2">
@@ -22,11 +22,14 @@
       </p>
     </p>
   </div>
+</section>
+<section class="h-full grid grid-cols-12">
   <div
-    class="col-start-2 col-end-12 md:col-start-2 md:col-end-6 mt-40 md:my-40"
+    id="skills"
+    class="col-start-2 col-end-12 md:col-start-2 md:col-end-5 mt-40"
   >
     <h3 class="text-3xl mb-4">Skills</h3>
-    <div class="flex flex-wrap justify-start text-lg gap-x-1 gap-y-4">
+    <div class="flex flex-wrap justify-start text-lg gap-x-3 gap-y-6">
       <div>
         <span class="py-1 px-2 border-2 border-black rounded-full">HTML</span>
       </div>
@@ -78,14 +81,16 @@
     </div>
   </div>
   <div
-    class="col-start-2 col-end-12 md:col-start-8 md:col-end-12 flex flex-col md:items-end mt-10 md:mt-40"
+    class="col-start-2 col-end-12 md:col-start-8 md:col-end-12 flex flex-col md:items-end mt-40"
   >
     <h3 class="text-3xl mb-4">Formazione</h3>
+    <h4 class="">Responsive Web Design</h4>
+    <p class="text-xs mb-3 italic text-[#949494]">freeCodeCamp - Feb 2025</p>
     <h4 class="">Corso Web Design & Front-end development</h4>
     <p class="text-xs mb-3 italic text-[#949494]">
-      Nuova Accademia delle Belle Arti di Milano (NABA)
+      Nuova Accademia delle Belle Arti di Milano (NABA) - Gen 2025
     </p>
     <h4 class="">Web development bootcamp</h4>
-    <p class="text-xs mb-3 italic text-[#949494]">Udemy</p>
+    <p class="text-xs mb-3 italic text-[#949494]">Udemy - Set 2024</p>
   </div>
 </section>
