--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -3,9 +3,9 @@ import Todo from "../components/Todo.astro";
 import Weather from "./Weather.astro";
 ---
 
-<div id="progetti" class="mb-40"></div>
+<div id="progetti" class="h-32"></div>
 
-<section class="h-full grid grid-cols-12 md:my-40">
+<section class="h-full grid grid-cols-12 md:mb-40">
   <div
     class="col-start-2 col-end-12 grid grid-cols-4 grid-rows-10 gap-5 h-full"
   >
