--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,9 +1,9 @@
-<section class="h-svh w-full grid grid-cols-12">
+<section class="h-[560px] w-full grid grid-cols-12">
   <div
-    class="col-start-2 col-end-12 flex flex-col gap-5 items-center justify-center translate-y-20"
+    class="col-span-12 flex flex-col gap-5 items-center justify-center translate-y-28"
   >
-    <h1 class="overflow-hidden text-xs md:text-4xl p-2">
-      Sono un <span class="text dinamic-text-content"
+    <h1 class="overflow-hidden text-lg md:text-4xl p-2 text-center">
+      Sono un <br /><span class="text dinamic-text-content"
         >Web designer & Front-end developer</span
       >
     </h1>
