--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -78,4 +80,18 @@ body {
 .hidden {
   transform: translateY(-100%);
   transition: transform 0.3s ease-in-out;
+}
+
+/* Animazione Timer */
+
+.start {
+  color: #fff;
+  --tw-text-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-text-opacity, 1));
+}
+
+.pause {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+  color: #fff;
 }
