Updated about section

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -84,7 +84,11 @@
     class="col-start-2 col-end-12 md:col-start-8 md:col-end-12 flex flex-col md:items-end mt-40"
   >
     <h3 class="text-3xl mb-4">Formazione</h3>
-    <h4 class="">Responsive Web Design</h4>
+    <h4>CSS for JavaScript Developers</h4>
+    <p class="text-xs mb-3 italic text-[#949494]">
+      CSS for JavaScript Developers by Josh W. Comeau - Mar 2025
+    </p>
+    <h4>Responsive Web Design</h4>
     <p class="text-xs mb-3 italic text-[#949494]">freeCodeCamp - Feb 2025</p>
     <h4 class="">Corso Web Design & Front-end development</h4>
     <p class="text-xs mb-3 italic text-[#949494]">
