--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer id="contatti" class="h-full w-full grid grid-cols-12 md:mt-20 mb-8">
+<footer class="h-full w-full grid grid-cols-12 md:mt-20 mb-8">
   <div class="col-start-2 col-end-12 md:col-start-2 md:col-end-6">
     <div class="text-lg leading-none tremble mb-4">
       <a href="/">simone garofalo</a>
