--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -6,7 +6,7 @@ import Weather from "./Weather.astro";
 
 <div id="progetti" class="h-32"></div>
 
-<section class="h-full grid grid-cols-12 md:mb-40">
+<section class="h-full grid grid-cols-12">
   <div
     class="col-start-2 col-end-12 grid grid-cols-4 grid-rows-11 gap-5 h-full"
   >
